card image hover effect added

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       </div>
       <div class="row js--wp-3">
         <!--One of four City-->
-        <div class="col span-1-of-4 box">
+        <div class="col span-1-of-4 box city-featues-img-wrapper">
           <img src="./resources/img/london.jpg" alt="#" class="city-photo" />
           <h3>London</h3>
           <div class="city-feature">
@@ -257,7 +257,7 @@
           </div>
         </div>
         <!--One of four City-->
-        <div class="col span-1-of-4 box">
+        <div class="col span-1-of-4 box city-featues-img-wrapper">
           <img
             src="./resources/img/san-francisco.jpg"
             alt="#"
@@ -278,7 +278,7 @@
           </div>
         </div>
         <!--One of four City-->
-        <div class="col span-1-of-4 box">
+        <div class="col span-1-of-4 box city-featues-img-wrapper">
           <img src="./resources/img/berlin.jpg" alt="#" class="city-photo" />
           <h3>Berlin</h3>
           <div class="city-feature">
@@ -295,7 +295,7 @@
           </div>
         </div>
         <!--One of four City-->
-        <div class="col span-1-of-4 box">
+        <div class="col span-1-of-4 box city-featues-img-wrapper">
           <img src="./resources/img/lisbon-3.jpg" alt="#" class="city-photo" />
           <h3>Lisbon</h3>
           <div class="city-feature">
