back top top button added

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
   <!--body start-->
   <body>
+    <button type="button" id="btn-back-to-top"><i class="fas fa-arrow-up"></i></button>
     <!--header start-->
     <header class="header" id="header">
       <!--nav bar start-->
