--- a/index.html
+++ b/index.html
@@ -35,11 +35,17 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+    // Add the new slick-theme.css if you want the default styling
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css" integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css" integrity="sha512-6lLUdeQ5uheMFbWm3CP271l14RsX1xtx+J5x2yeIDkkiBpeVTNhTqijME7GgRKKi6hCqovwCoBTlRBEC20M8Mg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
 
   <!--body start-->
   <body>
-    <button type="button" id="btn-back-to-top"><i class="fas fa-arrow-up"></i></button>
+    <button type="button" id="btn-back-to-top">
+      <i class="fas fa-arrow-up"></i>
+    </button>
     <!--header start-->
     <header class="header" id="header">
       <!--nav bar start-->
@@ -143,45 +149,61 @@
       <ul class="meal-showcase clearfix img-gallery">
         <li>
           <figure class="meal-img">
-             <a href="./resources/img/1.jpg" target="_blank"><img src="./resources/img/1.jpg" alt="#" /></a>            
+            <a href="./resources/img/1.jpg" target="_blank"
+              ><img src="./resources/img/1.jpg" alt="#"
+            /></a>
           </figure>
         </li>
         <li>
           <figure class="meal-img">
-             <a href="./resources/img/2.jpg" target="_blank"><img src="./resources/img/2.jpg" alt="#" /></a>            
+            <a href="./resources/img/2.jpg" target="_blank"
+              ><img src="./resources/img/2.jpg" alt="#"
+            /></a>
           </figure>
         </li>
         <li>
           <figure class="meal-img">
-             <a href="./resources/img/3.jpg" target="_blank"><img src="./resources/img/3.jpg" alt="#" /></a>            
+            <a href="./resources/img/3.jpg" target="_blank"
+              ><img src="./resources/img/3.jpg" alt="#"
+            /></a>
           </figure>
         </li>
         <li>
           <figure class="meal-img">
-             <a href="./resources/img/4.jpg" target="_blank"><img src="./resources/img/4.jpg" alt="#" /></a>            
+            <a href="./resources/img/4.jpg" target="_blank"
+              ><img src="./resources/img/4.jpg" alt="#"
+            /></a>
           </figure>
         </li>
       </ul>
       <!--second row of meals-->
-     <ul class="meal-showcase clearfix img-gallery">
+      <ul class="meal-showcase clearfix img-gallery">
         <li>
           <figure class="meal-img">
-             <a href="./resources/img/5.jpg" target="_blank"><img src="./resources/img/5.jpg" alt="#" /></a>            
+            <a href="./resources/img/5.jpg" target="_blank"
+              ><img src="./resources/img/5.jpg" alt="#"
+            /></a>
           </figure>
         </li>
         <li>
           <figure class="meal-img">
-             <a href="./resources/img/6.jpg" target="_blank"><img src="./resources/img/6.jpg" alt="#" /></a>            
+            <a href="./resources/img/6.jpg" target="_blank"
+              ><img src="./resources/img/6.jpg" alt="#"
+            /></a>
           </figure>
         </li>
         <li>
           <figure class="meal-img">
-             <a href="./resources/img/7.jpg" target="_blank"><img src="./resources/img/7.jpg" alt="#" /></a>            
+            <a href="./resources/img/7.jpg" target="_blank"
+              ><img src="./resources/img/7.jpg" alt="#"
+            /></a>
           </figure>
         </li>
         <li>
           <figure class="meal-img">
-             <a href="./resources/img/8.jpg" target="_blank"><img src="./resources/img/8.jpg" alt="#" /></a>            
+            <a href="./resources/img/8.jpg" target="_blank"
+              ><img src="./resources/img/8.jpg" alt="#"
+            /></a>
           </figure>
         </li>
       </ul>
@@ -323,7 +345,7 @@
         <h2>Our customer can't live without us</h2>
       </div>
 
-      <div class="row">
+      <div class="row feedback">
         <!--customer column one-->
         <div class="col span-1-of-3">
           <blockquote>
@@ -336,7 +358,6 @@
             >
           </blockquote>
         </div>
-
         <!--customer column two-->
         <div class="col span-1-of-3">
           <blockquote>
@@ -349,7 +370,42 @@
             >
           </blockquote>
         </div>
-
+        <!--customer column three-->
+        <div class="col span-1-of-3">
+          <blockquote>
+            I was looking for a quick and easy food delivery service in San
+            Franciso. I tried a lot of them and ended up with Omnifood. Best
+            food delivery service in the Bay Area. Keep up the great work!
+            <cite
+              ><img src="./resources/img/customer-3.jpg" alt="#" />Milton
+              Chapman</cite
+            >
+          </blockquote>
+        </div>
+        <!--customer column one-->
+        <div class="col span-1-of-3">
+          <blockquote>
+            Omnifood is just awesome! I just launched a startup which leaves me
+            with no time for cooking, so Omnifood is a life-saver. Now that I
+            got used to it, I couldn't live without my daily meals!
+            <cite
+              ><img src="./resources/img/customer-1.jpg" alt="#" />Alberto
+              Duncan</cite
+            >
+          </blockquote>
+        </div>
+        <!--customer column two-->
+        <div class="col span-1-of-3">
+          <blockquote>
+            Inexpensive, healthy and great-tasting meals, delivered right to my
+            home. We have lots of food delivery here in Lisbon, but no one comes
+            even close to Omifood. Me and my family are so in love!
+            <cite
+              ><img src="./resources/img/customer-2.jpg" alt="#" />Joana
+              Silva</cite
+            >
+          </blockquote>
+        </div>
         <!--customer column three-->
         <div class="col span-1-of-3">
           <blockquote>
@@ -595,6 +651,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <!-- slick slider js link -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   </body>
   <!--body end-->
 </html>
